deploy: ukfrs-CDDFRS/site_backend_code@865b27fcb1f9b67ef7421e039a125080673e59aa

--- a/home-fire-safety/partner-referrals/index.html
+++ b/home-fire-safety/partner-referrals/index.html
@@ -22,21 +22,21 @@
   <meta property="og:locale" content="en_GB">
   
   
-  <link rel="icon" sizes="48x48" href="/assets/images/CDDFRA%20stacked%20wide%20CMYK%20crest%20only_resized.png">
-  <link rel="icon" sizes="any" href="/assets/images/CDDFRA%20stacked%20wide%20CMYK%20crest%20only_resized.png" type="image/png">
-  <link rel="apple-touch-icon" href="/assets/images/CDDFRA%20stacked%20wide%20CMYK%20crest%20only_resized.png">
-  <link rel="manifest" href="/assets/manifest.json">
+  <link rel="icon" sizes="48x48" href="/beta-public-website/assets/images/CDDFRA%20stacked%20wide%20CMYK%20crest%20only_resized.png">
+  <link rel="icon" sizes="any" href="/beta-public-website/assets/images/CDDFRA%20stacked%20wide%20CMYK%20crest%20only_resized.png" type="image/png">
+  <link rel="apple-touch-icon" href="/beta-public-website/assets/images/CDDFRA%20stacked%20wide%20CMYK%20crest%20only_resized.png">
+  <link rel="manifest" href="/beta-public-website/assets/manifest.json">
   
   
-  <link rel="stylesheet" href="/assets/css/main.css">
-  <link rel="stylesheet" href="/pagefind/pagefind-ui.css">
+  <link rel="stylesheet" href="/beta-public-website/assets/css/main.css">
+  <link rel="stylesheet" href="/beta-public-website/pagefind/pagefind-ui.css">
   
   
 <head>
   
   
   <!-- GOV.UK Frontend CSS -->
-  <link rel="stylesheet" href="/node_modules/govuk-frontend/dist/govuk/govuk.min.css">
+  <link rel="stylesheet" href="/beta-public-website/node_modules/govuk-frontend/dist/govuk/govuk.min.css">
 <body class="govuk-template__body">
   
   <script nonce="">
@@ -71,7 +71,7 @@
       <button type="button" class="govuk-button" data-module="govuk-button" data-cookie-choice="reject">
         Reject analytics cookies
       </button>
-      <a class="govuk-link" href="/cookies/">View cookies</a>
+      <a class="govuk-link" href="/beta-public-website/cookies/">View cookies</a>
     </div>
   </div>
 </div>
@@ -103,10 +103,10 @@
 <header class="app-header" role="banner" data-module="app-header">
   <div class="app-header__container govuk-width-container">
     <div class="app-header__logo">
-      <a href="/" class="app-header__link app-header__link--homepage" aria-label="County Durham and Darlington Fire and Rescue Service - Home">
+      <a href="/beta-public-website/" class="app-header__link app-header__link--homepage" aria-label="County Durham and Darlington Fire and Rescue Service - Home">
         <span class="app-header__logotype">
           
-          <img src="/assets/images/CDDFRA%20stacked%20wide%20CMYK%20crest%20only_resized.png" alt="" class="app-header__logo-icon" aria-hidden="true">
+          <img src="/beta-public-website/assets/images/CDDFRA%20stacked%20wide%20CMYK%20crest%20only_resized.png" alt="" class="app-header__logo-icon" aria-hidden="true">
         </span>
         <span class="app-header__service-name">
           County Durham and Darlington<br>
@@ -191,7 +191,7 @@
   <div id="header-search" class="app-header__search-wrapper" hidden>
     <div class="govuk-width-container">
       <p class="app-header__search-heading">Search ddfire.gov.uk</p>
-      <form class="app-header__search-form" action="/search/" method="get" role="search">
+      <form class="app-header__search-form" action="/beta-public-website/search/" method="get" role="search">
         <label class="govuk-visually-hidden" for="header-search-input">Search</label>
         <input type="search" id="header-search-input" name="q" class="app-header__search-input" placeholder="" autocomplete="off">
         <button type="submit" class="app-header__search-submit" aria-label="Search">
@@ -307,7 +307,7 @@
       beta
     </strong>
     <span class="govuk-phase-banner__text">
-      This is a new service – your <a class="govuk-link" href="/feedback/">feedback</a> will help us to improve it.
+      This is a new service – your <a class="govuk-link" href="/beta-public-website/feedback/">feedback</a> will help us to improve it.
     </span>
   </p>
 </div>
@@ -320,7 +320,7 @@
 <nav class="govuk-breadcrumbs" aria-label="Breadcrumb">
   <ol class="govuk-breadcrumbs__list">
     <li class="govuk-breadcrumbs__list-item">
-      <a class="govuk-breadcrumbs__link" href="/">Home</a>
+      <a class="govuk-breadcrumbs__link" href="/beta-public-website/">Home</a>
     </li>
     
       <li class="govuk-breadcrumbs__list-item">
@@ -447,8 +447,8 @@
     <div class="app-footer__meta">
       <div class="app-footer__meta-item app-footer__meta-item--grow">
         <div class="app-footer__logo">
-          <a href="/" class="app-footer__link" aria-label="County Durham and Darlington Fire and Rescue Service - Home">
-            <img src="/assets/images/CDDFRA%20stacked%20wide%20CMYK%20crest%20only_resized.png" alt="" class="app-footer__logo-icon" aria-hidden="true">
+          <a href="/beta-public-website/" class="app-footer__link" aria-label="County Durham and Darlington Fire and Rescue Service - Home">
+            <img src="/beta-public-website/assets/images/CDDFRA%20stacked%20wide%20CMYK%20crest%20only_resized.png" alt="" class="app-footer__logo-icon" aria-hidden="true">
             <span class="app-footer__logo-text">CDDFRS</span>
           </a>
         </div>
@@ -565,13 +565,13 @@
   
 
   
-  <script src="/assets/js/app.js" type="module"></script>
-  <script src="/pagefind/pagefind-ui.js"></script>
+  <script src="/beta-public-website/assets/js/app.js" type="module"></script>
+  <script src="/beta-public-website/pagefind/pagefind-ui.js"></script>
   
   
 </body>
 </html>
   <!-- GOV.UK Frontend JS -->
-  <link rel="stylesheet" href="/assets/css/govuk.min.css">
-  <script src="/assets/js/govuk.min.js"></script>
+  <link rel="stylesheet" href="/beta-public-website/assets/css/govuk.min.css">
+  <script src="/beta-public-website/assets/js/govuk.min.js"></script>
   <script>window.GOVUKFrontend.initAll();</script>
