deploy: ukfrs-CDDFRS/site_backend_code@a8e891d20b3eb235d93fc10644d1394af9238b01

--- a/about/stations/barnard-castle-fire-station/index.html
+++ b/about/stations/barnard-castle-fire-station/index.html
@@ -375,8 +375,9 @@
     <div id="accordion-default-content-1"
       class="govuk-accordion__section-content"
       aria-labelledby="accordion-default-heading-1">
-      <p class="govuk-body">On-Call.</p>
-    </div>
+      <ul class="govuk-list govuk-list--bullet">
+<p></ul>
+</div></p>
   </div>
   <div class="govuk-accordion__section">
     <div class="govuk-accordion__section-header">
@@ -426,9 +427,9 @@
       class="govuk-accordion__section-content"
       aria-labelledby="accordion-default-heading-3">
       <p class="govuk-body"> 
-        </li>Address: Barnard Castle Emergency Services, Wilsion Street, Barnard Castle, DL12 8JU<li>
-        <p>what3words address: <a href="https://what3words.com////demotion.upstarts.order" target="_blank" translate="no">///demotion.upstarts.order</a></p>
-        <li>Phone: <a href="tel:0345 305 8383" class="govuk-link">0345 305 8383</a></li>
+        </li>Address: , <li>
+        <p>what3words address: <a href="https://what3words.com/" target="_blank" translate="no"></a></p>
+        <li>Phone: <a href="tel:" class="govuk-link">0345 305 8383</a></li>
         <li>Email: <a href="mailto:ServiceHQ@ddfire.gov.uk" class="govuk-link">ServiceHQ@ddfire.gov.uk</a></li>
       </p>
     </div>
