deploy: ukfrs-CDDFRS/site_backend_code@567fca1f032aa1fe6d61ad7bcbe49b972b961f85

--- a/about/stations/barnard-castle-fire-station/index.html
+++ b/about/stations/barnard-castle-fire-station/index.html
@@ -376,6 +376,7 @@
       class="govuk-accordion__section-content"
       aria-labelledby="accordion-default-heading-1">
       <ul class="govuk-list govuk-list--bullet">
+<p><li>Retained Duty System (RDS)</li></p>
 <p></ul>
 </div></p>
   </div>
@@ -427,9 +428,9 @@
       class="govuk-accordion__section-content"
       aria-labelledby="accordion-default-heading-3">
       <p class="govuk-body"> 
-        </li>Address: , <li>
-        <p>what3words address: <a href="https://what3words.com/" target="_blank" translate="no"></a></p>
-        <li>Phone: <a href="tel:" class="govuk-link">0345 305 8383</a></li>
+        </li>Address: Barnard Castle Emergency Services, Wilson Street, Barnard Castle, DL12 8JU<li>
+        <p>what3words address: <a href="https://what3words.com////demotion.upstarts.order" target="_blank" translate="no">///demotion.upstarts.order</a></p>
+        <li>Phone: <a href="tel:01833 695 487" class="govuk-link">0345 305 8383</a></li>
         <li>Email: <a href="mailto:ServiceHQ@ddfire.gov.uk" class="govuk-link">ServiceHQ@ddfire.gov.uk</a></li>
       </p>
     </div>
