--- a/about/stations/barnard-castle-fire-station/index.html
+++ b/about/stations/barnard-castle-fire-station/index.html
@@ -375,7 +375,7 @@
     <div id="accordion-default-content-1"
       class="govuk-accordion__section-content"
       aria-labelledby="accordion-default-heading-1">
-      <ul class="govuk-list govuk-list--bullet">
+      <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
 <p><li>Retained Duty System (RDS)</li></p>
 <p></ul>
 </div></p>
@@ -427,12 +427,12 @@
     <div id="accordion-default-content-3"
       class="govuk-accordion__section-content"
       aria-labelledby="accordion-default-heading-3">
-      <p class="govuk-body"> 
-        </li>Address: Barnard Castle Emergency Services, Wilson Street, Barnard Castle, DL12 8JU<li>
-        <p>what3words address: <a href="https://what3words.com////demotion.upstarts.order" target="_blank" translate="no">///demotion.upstarts.order</a></p>
+      <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
+        <li>Address: Barnard Castle Emergency Services, Wilson Street, Barnard Castle, DL12 8JU</li>
+        <li>what3words address: <a href="https://what3words.com////demotion.upstarts.order" target="_blank" translate="no">///demotion.upstarts.order</a></li>
         <li>Phone: <a href="tel:01833 695 487" class="govuk-link">0345 305 8383</a></li>
         <li>Email: <a href="mailto:ServiceHQ@ddfire.gov.uk" class="govuk-link">ServiceHQ@ddfire.gov.uk</a></li>
-      </p>
+      </ul>
     </div>
   </div>
   <div class="govuk-accordion__section">
