deploy: ukfrs-CDDFRS/site_backend_code@25f56b9b867e3fca776e621e3565f93add1f99de

--- a/about/stations/index.html
+++ b/about/stations/index.html
@@ -360,6 +360,8 @@
 </ul>
 <h3>Emergency Response Locations</h3>
 <ul>
+<p><li><a href="/beta-public-website/about/stations/bishop-auckland-fire-station/">Bishop Auckland Community Fire Station</a></li></p>
+<p><li><a href="/beta-public-website/about/stations/consett-community-fire-station/">[object Object]</a></li></p>
 <p><li><a href="/beta-public-website/about/stations/barnard-castle-fire-station/">Barnard Castle Emergency Services</a></li></p>
 </ul>
       
