deploy: ukfrs-CDDFRS/site_backend_code@e3ae082cc5a93c6e01976cc4aa6ec0634807ef33

--- a/about/stations/barnard-castle-fire-station/index.html
+++ b/about/stations/barnard-castle-fire-station/index.html
@@ -358,6 +358,7 @@
         <p class="govuk-body-l">
   We are a public sector organisation committed to delivering high-quality services to citizens across the United Kingdom.
 </p>
+<img src="/assets/images/locations/barnard_castle_emergency_services.jpg" alt="Barnard Castle Fire Station" class="govuk-image" />
 <div class="govuk-accordion" data-module="govuk-accordion" id="accordion-default">
   <div class="govuk-accordion__section">
     <div class="govuk-accordion__section-header">
@@ -430,7 +431,7 @@
       <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
         <li>Address: Barnard Castle Emergency Services, Wilson Street, Barnard Castle, DL12 8JU</li>
         <li>what3words address: <a href="https://what3words.com////demotion.upstarts.order" target="_blank" translate="no">///demotion.upstarts.order</a></li>
-        <li>Phone: <a href="tel:01833 695 487" class="govuk-link">0345 305 8383</a></li>
+        <li>Phone: <a href="tel:" class="govuk-link">0345 305 8383</a></li>
         <li>Email: <a href="mailto:ServiceHQ@ddfire.gov.uk" class="govuk-link">ServiceHQ@ddfire.gov.uk</a></li>
       </ul>
     </div>
