--- a/about/stations/barnard-castle-fire-station/index.html
+++ b/about/stations/barnard-castle-fire-station/index.html
@@ -356,9 +356,9 @@
       
       
         <p class="govuk-body-l">
-  We are a public sector organisation committed to delivering high-quality services to citizens across the United Kingdom.
+    Barnard Castle Emergency Services is a shared facility that houses the fire station, ambulance station, police station, and mountain rescue station for the Barnard Castle area. The fire station operates on a Retained Duty System (RDS) basis, meaning that firefighters are on call and respond to emergencies as needed. The facility is owned by the County Durham and Darlington Fire and Rescue Service and is freehold. It serves as a response station for the local community, providing essential emergency services to the area.
 </p>
-<img src="/assets/images/locations/barnard_castle_emergency_services.jpg" alt="Barnard Castle Fire Station" class="govuk-image" />
+<img src="/beta-public-website/assets/images/locations/barnard_castle_emergency_services.jpg" alt="Barnard Castle Fire Station" class="govuk-image" />
 <div class="govuk-accordion" data-module="govuk-accordion" id="accordion-default">
   <div class="govuk-accordion__section">
     <div class="govuk-accordion__section-header">
