--- a/about/stations/consett-community-fire-station/index.html
+++ b/about/stations/consett-community-fire-station/index.html
@@ -356,8 +356,9 @@
       
       
         <p class="govuk-body-l">
-  We are a public sector organisation committed to delivering high-quality services to citizens across the United Kingdom.
+  Consett Community Fire Station is a shared facility that houses the fire station for the Consett area. The fire station operates on both a Retained Duty System (RDS) and Wholetime (WT) basis, meaning that firefighters are on call and respond to emergencies as needed, while also having a dedicated team of firefighters who are stationed at the facility. The station is owned by the County Durham and Darlington Fire and Rescue Service and is freehold. It serves as a response station for the local community, providing essential emergency services to the area.
 </p>
+<img src="/beta-public-website/assets/images/locations/consett_community_fire_station.jpg" alt="Barnard Castle Fire Station" class="govuk-image" />
 <div class="govuk-accordion" data-module="govuk-accordion" id="accordion-default">
   <div class="govuk-accordion__section">
     <div class="govuk-accordion__section-header">
@@ -431,7 +432,7 @@
       <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
         <li>Address: Consett Community Fire Station, Front Street, Consett, DH8 5QF</li>
         <li>what3words address: <a href="https://what3words.com////sleeps.cupboard.sweeper" target="_blank" translate="no">///sleeps.cupboard.sweeper</a></li>
-        <li>Phone: <a href="tel:01207 502 500" class="govuk-link">0345 305 8383</a></li>
+        <li>Phone: <a href="tel:" class="govuk-link">0345 305 8383</a></li>
         <li>Email: <a href="mailto:ServiceHQ@ddfire.gov.uk" class="govuk-link">ServiceHQ@ddfire.gov.uk</a></li>
       </ul>
     </div>
