deploy: ukfrs-CDDFRS/site_backend_code@1faed4b1d2557369815f28db9306fe6aa54ab6ce

--- a/about/stations/consett-community-fire-station/index.html
+++ b/about/stations/consett-community-fire-station/index.html
@@ -358,7 +358,7 @@
         <p class="govuk-body-l">
   Consett Community Fire Station is a shared facility that houses the fire station for the Consett area. The fire station operates on both a Retained Duty System (RDS) and Wholetime (WT) basis, meaning that firefighters are on call and respond to emergencies as needed, while also having a dedicated team of firefighters who are stationed at the facility. The station is owned by the County Durham and Darlington Fire and Rescue Service and is freehold. It serves as a response station for the local community, providing essential emergency services to the area.
 </p>
-<img src="/beta-public-website/assets/images/locations/consett_community_fire_station.jpg" alt="Barnard Castle Fire Station" class="govuk-image" />
+<img src="/beta-public-website/assets/images/locations/consett_community_fire_station.jpg" alt="Consett Community Fire Station" class="govuk-image" />
 <div class="govuk-accordion" data-module="govuk-accordion" id="accordion-default">
   <div class="govuk-accordion__section">
     <div class="govuk-accordion__section-header">
@@ -431,7 +431,7 @@
       aria-labelledby="accordion-default-heading-3">
       <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
         <li>Address: Consett Community Fire Station, Front Street, Consett, DH8 5QF</li>
-        <li>what3words address: <a href="https://what3words.com////sleeps.cupboard.sweeper" target="_blank" translate="no">///sleeps.cupboard.sweeper</a></li>
+        <li>what3words address: <a href="https://what3words.com////dragon.lamp.frosted" target="_blank" translate="no">///dragon.lamp.frosted</a></li>
         <li>Phone: <a href="tel:" class="govuk-link">0345 305 8383</a></li>
         <li>Email: <a href="mailto:ServiceHQ@ddfire.gov.uk" class="govuk-link">ServiceHQ@ddfire.gov.uk</a></li>
       </ul>
