--- a/about/stations/index.html
+++ b/about/stations/index.html
@@ -362,7 +362,12 @@
 <ul>
 <p><li><a href="/beta-public-website/about/stations/barnard-castle-fire-station/">Barnard Castle Emergency Services</a></li></p>
 <p><li><a href="/beta-public-website/about/stations/bishop-auckland-fire-station/">Bishop Auckland Community Fire Station</a></li></p>
+<p><li><a href="/beta-public-website/about/stations/crook-fire-station/">Crook Fire Station</a></li></p>
+<p><li><a href="/beta-public-website/about/stations/darlington-fire-station/">Darlington Fire Station</a></li></p>
 <p><li><a href="/beta-public-website/about/stations/consett-community-fire-station/">Consett Community Fire Station</a></li></p>
+<p><li><a href="/beta-public-website/about/stations/durham-fire-station/">Durham Fire Station</a></li></p>
+<p><li><a href="/beta-public-website/about/stations/middleton-in-teesdale-fire-station/">Middleton-in-Teesdale Fire Station</a></li></p>
+<p><li><a href="/beta-public-website/about/stations/high-handenhold-fire-station/">High Handenhold Fire Station</a></li></p>
 </ul>
       
     </div>
